# microBioRust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.json  info.json  mkdocs.yml  regressions.xml  test_output.gbk  test_output.gff
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: layout-organisation-report.md
.github/workflows/: microbiorust-py_benchmarks.yml  mkdocs_ci.yml  rust.yml
crates/heatmap/src/: heatmap_data.rs  lib.rs
crates/microBioRust/tests/: embl_to_faa.rs  embl_to_ffn.rs
crates/seqmetrics/: test_hamming.aln
crates/seqmetrics/src/: metrics.rs  write_dst_csv.rs
docs/: formats_and_parsing.md  formats_and_parsing.md~  index.md  installation.md  usage.md  windows_install.md
docs/stylesheets/: extra.css
graphs/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/summary/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  bench_pipeline.PipelineSuite.track_parsing_latency.json
heatmap/: Cargo.toml  README.md
heatmap/src/: heatmap_data.rs  lib.rs
heatmap/src/canvas/: drawing.rs
heatmap/static/: index.html  style.css
microBioRust/: Cargo.toml  K12_ribo.gbk  README.md  expand.rs  new_output.gbk  new_output.gff  new_output_embl.gbk  new_output_embl.gff  test_output.gff  test_output_embl.gff
microBioRust/src/: embl.rs  gbk.rs  gbk.rs~  lib.rs  main.rs  record.rs  testmain.rs
microBioRust/tests/: create_new_record.rs  genbank_to_faa.rs  genbank_to_ffn.rs  genbank_to_gff.rs
microSeqIO/: Cargo.toml  new_output.gbk  test_output.gbk  test_output.gff
microSeqIO/src/: gbk.rs  lib.rs  main.rs
microbiorust-py/: Cargo.toml  README.md  Rhiz3841.gbk.gb_out.faa  asv.conf.json  bp_gbk2faa.py  config.toml  predicted_proteins.faa  pyproject.toml  rhiz.faa  rust_via_python_countgbk2faa.py  rust_via_python_gbk2faa.py
microbiorust-py/.asv/results/lisas-MacBook-Pro-2.local/: machine.json
microbiorust-py/benchmarks/: bench_pipeline.py
microbiorust-py/src/: lib.rs
python/microbiorust-py/: Cargo.toml
python/microbiorust-py/src/: macros.rs
results/: benchmarks.json
results/github-runner/: 09de3587-virtualenv-py3.12.json  1f0d9310-virtualenv-py3.12.json  7c2c4a18-virtualenv-py3.12.json  99af6871-virtualenv-py3.12.json  d88a884a-virtualenv-py3.12.json  f1c7851b-virtualenv-py3.12.json  f7624a57-virtualenv-py3.12.json
seqmetrics/: Cargo.toml  README.md  dipeptide_stability_values.csv
seqmetrics/microBioRust/: .dribble.example.embl  README.md  example.embl  rhizexample.gbk
seqmetrics/microBioRust/src/: embl.rs  record.rs
seqmetrics/microBioRust/tests/: embl_to_gff.rs  genbank_to_ffn.rs  genbank_to_gff.rs
seqmetrics/src/: hamming.rs  hamming.rs~  lib.rs  metrics.rs  metrics.rs~  write_dst_csv.rs  write_dst_csv.rs~
site/: 404.html  index.html  sitemap.xml
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
src/: embl.rs  embl.rs~  ewtex  gbk.rs  lib.rs  main.rs  txt
static/: index.html
