[package]
name = "heatmap"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","visualization","data-structures"]
readme = "README.md"
exclude = [".git",".gitignore"]
repository = "https://github.com/LCrossman/microBioRust"
version = "0.1.0-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
opt-level = "z"

[dependencies]
serde-wasm-bindgen = "0.4"
serde = { version = "1.0.213", features = ["derive"] }
serde_derive = "1.0"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.72", features = ["console","CanvasRenderingContext2d", "HtmlCanvasElement", "Document", "Window"] }
csv = "1.1"
