[package]
name = "microBioRust"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics", "micro", "bio", "genomics", "sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "science::bioinformatics",
    "science",
    "data-structures",
]
readme = "README.md"
exclude = [".git", ".gitignore"]
repository = "https://github.com/LCrossman/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
paste = "1.0"
itertools = "0.10.1"
protein-translate = "0.2.0"
bio = "2.3.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.5"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
