[package]
name = "microbiorust-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
exclude = [".git",".gitignore"]
repository = "https://github.com/LCrossman/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lib]
name = "microbiorust"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.25.0" 
features = ["auto-initialize"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
microBioRust = { path = "../microBioRust" }
