[build-system]
# This tells pip: "Use Maturin to build this, not setuptools"
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "microbiorust-py"
version = "0.1.2"
# Valid python versions
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# If you have runtime python dependencies (e.g. Biopython), list them here.
# For benchmarking pure Rust speed, usually keep this empty.
dependencies = []
 
# This tells Python to look at Cargo.toml for the version number.
[tool.maturin]
manifest-path = "Cargo.toml"
bindings = "pyo3"
module-name = "microbiorust"
features = ["pyo3/extension-module"]
