[package]
name = "microBioRust-seqmetrics"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
readme = "README.md"
exclude = [".git",".gitignore"]
repository = "https://github.com/LCrossman/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
microBioRust = "0.1.2"
bio = "2.3.0"
anyhow = "1.0.93"
clap = { version = "4.5.19", features = ["derive"] }
tokio = {version = "1.45.1", features = ["full"] }
